--- a/src/main/resources/fxml/peopleInSpace.fxml
+++ b/src/main/resources/fxml/peopleInSpace.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="borderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#loadMenu" prefHeight="800.0" prefWidth="1800.0" stylesheets="@../css/app.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="issCenter.peopleInSpace.PeopleInSpaceController">
+<BorderPane fx:id="borderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#loadMenu" prefHeight="800.0" prefWidth="1800.0" stylesheets="@../css/app.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.peopleInSpace.PeopleInSpaceController">
     <top>
         <Pane prefHeight="90.0" prefWidth="600.0" BorderPane.alignment="CENTER">
             <children>
