--- a/src/main/resources/fxml/settings.fxml
+++ b/src/main/resources/fxml/settings.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="borderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#loadMenu" prefHeight="800.0" prefWidth="1800.0" stylesheets="@../css/app.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="issCenter.settings.SettingsController">
+<BorderPane fx:id="borderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#loadMenu" prefHeight="800.0" prefWidth="1800.0" stylesheets="@../css/app.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.settings.SettingsController">
    <top>
       <Pane prefHeight="90.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
